--- a/assets/scss/abstracks/_mixins.scss
+++ b/assets/scss/abstracks/_mixins.scss
@@ -33,4 +33,9 @@
             @content;
         }
     }
+    @if $breakpoint == 676 {
+        @media (max-width: 676px) {
+            @content;
+        }
+    }
 }
