--- a/assets/scss/style_01.scss
+++ b/assets/scss/style_01.scss
@@ -4,8 +4,9 @@
 @import './bases/fonts';
 @import './bases/ultilities';
 @import './components/header';
-@import './components/heroImage';
+@import './components/hero-image';
 @import './components/footer';
 @import './components/content';
+
 
 
