--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -108,26 +108,50 @@
     .navbar__logo {
         height: 10.1rem;
     }
-    // .navbar__list {
-    //     display: block;
-    //     // flex-direction: row;
-    //     // background-color: $color-background;
-    //     // margin-top: 0;
-    // }
-    // .navbar__text {
-    //     @include for-size(991) {
-    //         display: block;
-    //         position: absolute;
-    //         top: 0;
-    //         right: 0rem;
-    //         padding: 0rem;
-    //         flex-direction: row;
-    //         align-items: center;
-    //         justify-content : center;
-    //         background-color: $color-background;
-    //         border-radius: 0.3rem;
-    //     }
-    // }
 }
 
+// CONTENT 
+.section-header.content {
+    .navbar__logo {
+        flex-grow: 0;
+    }
+    .navbar {
+        padding: 0 0.6rem;
+        justify-content: space-between;
+    }
+    .navbar__list {
+        justify-content: center;
+        flex-grow: 1;
+    }
+    .nav-link {
+        padding: 1.2rem 1.4rem;
+    }
+    .navbar__login {
+        font-size: 1.5rem;
+        text-transform: none;
+    }
+    .login-name {
+       font-weight: 700;
+    }
+    .login-user {
+        color: $color-04;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            top: 50%; left: 0;
+            width: 1.3rem;
+            height: 1.3rem;
+            background-color: $color-04;
+            border-radius: 50%;
+            transform: translate(-115%, -50%);
+        }
+        span {
+            width: 1.3rem;
+            height: 1.3rem;
+            border-radius: 50%;
+            background-color: $color-04;
+        }
+    }
+}
 
