--- a/assets/scss/style_03.css
+++ b/assets/scss/style_03.css
@@ -242,67 +242,60 @@ input {
   background-size: 100% 100%;
   height: 10.6rem; }
 
-.section-footer {
-  padding: 3.5rem 9.5rem 1.8rem 2rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.3); }
+.section-register {
+  padding: 2rem 2rem 5rem; }
 
-.footer__wraper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 6rem; }
-  @media (max-width: 1200px) {
-    .footer__wraper {
-      gap: 3rem; } }
-
-.footer__link {
-  padding-top: 1rem;
-  flex-flow: 1; }
-  @media (max-width: 991px) {
-    .footer__link {
-      width: 100%;
-      text-align: center; } }
-  .footer__link .link {
-    color: rgba(6, 19, 135, 0.76);
-    font-weight: 700; }
-  .footer__link li + li {
-    margin-top: 2rem; }
-
-.footer__text {
-  flex-grow: 2; }
-  @media (max-width: 991px) {
-    .footer__text {
-      width: 100%;
-      text-align: center; } }
-  .footer__text .text-title {
+.register__wraper {
+  width: 65%;
+  margin: 0 auto; }
+  .register__wraper label {
+    width: 20%;
+    display: inline-block; }
+  .register__wraper input {
+    width: 79%;
+    padding: 1rem;
+    padding-left: 2rem;
+    border-radius: 0.5rem;
+    border-width: 1px;
+    outline: none; }
+  .register__wraper .form__control {
+    padding: 2rem 0; }
+  .register__wraper .register__or {
+    text-align: center;
+    font-size: 2.8rem;
     text-transform: uppercase;
-    font-weight: 700;
-    padding-bottom: 3.5rem; }
-  .footer__text .text-content {
-    line-height: 1.5; }
+    position: relative; }
+    .register__wraper .register__or::before, .register__wraper .register__or::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      width: 45%;
+      height: 1px;
+      background-color: #000000;
+      transform: translate(0, -50%); }
+    .register__wraper .register__or::before {
+      left: 0; }
+    .register__wraper .register__or::after {
+      right: 0; }
+  .register__wraper .register__continue {
+    margin-top: 5rem;
+    font-size: 3.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 0 3rem; }
+    @media (max-width: 991px) {
+      .register__wraper .register__continue {
+        font-size: 2.5rem;
+        gap: 0 2rem; } }
+    .register__wraper .register__continue .continue__link-icon {
+      font-size: 5rem; }
+      @media (max-width: 991px) {
+        .register__wraper .register__continue .continue__link-icon {
+          font-size: 3rem; } }
+    .register__wraper .register__continue .continue__link-text {
+      text-transform: uppercase;
+      margin-left: 3rem; }
 
-.footer__contact {
-  flex-grow: 2;
-  padding-top: 2rem;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
-  flex-wrap: nowrap; }
-  @media (max-width: 991px) {
-    .footer__contact {
-      width: 100%;
-      justify-content: center;
-      gap: 4rem; } }
-  .footer__contact .contact-icon {
-    width: 6.1rem;
-    height: 5rem; }
-  .footer__contact .contact-btn {
-    color: #000000;
-    padding: 0.3rem 1.5rem;
-    background-color: #C0DDF9;
-    font-size: 2rem;
-    font-weight: 700;
-    border-radius: 5px; }
-
-/*# sourceMappingURL=style_04.css.map */
+/*# sourceMappingURL=style_03.css.map */
