--- a/assets/scss/style_05.css
+++ b/assets/scss/style_05.css
@@ -86,6 +86,21 @@ button {
 input {
   cursor: pointer; }
 
+.btn {
+  padding: 0.6rem 3rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.7rem;
+  background-color: #4399C9;
+  border-radius: 0.5rem;
+  outline: none;
+  border: none; }
+  .btn:hover {
+    outline: none;
+    border-radius: 0.5rem; }
+  .btn:active {
+    outline: none; }
+
 .section-header {
   padding-top: 1rem;
   padding-right: 2rem;
