--- a/assets/scss/bases/_ultilities.scss
+++ b/assets/scss/bases/_ultilities.scss
@@ -23,4 +23,38 @@
     &:active {
         outline: none;
     }
+    @include for-size(991) {
+        padding: 0.5rem 2rem;
+    }
 }
+
+.btn-red {
+    width: 15.1rem;
+    height: 3.9rem;
+    text-align: center;
+    line-height: 3.9rem;
+    border-radius: 5px;
+    background-color: $color-06;
+    outline: none;
+    border: none;
+    color: white;
+    font-weight: 700;
+}
+
+.menu__item-link {
+    display: block;
+    padding: 1.6rem ;
+    background-color: $color-01;
+    border-radius: 0px 12px 12px 0px;  
+    font-weight: 700;
+    &.active {
+        background-color: $color-02; 
+    }
+}  
+
+.input__border-none {
+    border: none;
+    border-bottom: 1px solid $color-text;
+    font-size: inherit;
+}
+
