--- a/assets/scss/style_01.scss
+++ b/assets/scss/style_01.scss
@@ -7,6 +7,10 @@
 @import './components/hero-image';
 @import './components/footer';
 @import './components/content';
+@import './components/content-view';
+@import './components/product';
+@import './components/register';
+@import './components/blog';
 
 
 
