--- a/assets/scss/abstracks/_variables.scss
+++ b/assets/scss/abstracks/_variables.scss
@@ -3,12 +3,14 @@ $color-gray-50: rgba(0, 0, 0, 0.5);
 $color-gray-37: rgba(0, 0, 0, 0.37);
 $color-gray: #414141;
 $color-background: #FEFEC5 ; 
-$color-primary: #F53838;
 $color-border: rgba(0, 0, 0, 0.3);;
 $box-shadow: 0px 20px 24px -5px rgba(245, 56, 56, 0.35);
 $color-link:  rgba(6, 19, 135, 0.76);
 $color-opacity:  rgba(0, 0, 0, 0.37);
+$color-background-blog: #FFFFFF ;
 $color-01: #C0DDF9;
 $color-02: #F8D9CC;
 $color-03:#4399C9;
 $color-04: #A3CB38;
+$color-05:#C4C4C4;
+$color-06: #F25A5A;
